arm: laguna: Fix FPGA compilation failure

--- a/configs/lua-fpga_defconfig
+++ b/configs/lua-fpga_defconfig
@@ -31,17 +31,13 @@ CONFIG_LUA_PERIPH_CRU=y
 CONFIG_LUA_SAFETY_INIT=y
 CONFIG_LUA_DSU_PMU_INIT=y
 CONFIG_LUA_RAS_INIT=y
-CONFIG_LUA_NOR0=y
-CONFIG_LUA_MTDPARTS_NOR0="4m(uboot)"
 CONFIG_SYS_LOAD_ADDR=0x102000000
-CONFIG_BUILD_TARGET="u-boot.itb"
 CONFIG_DEBUG_UART=y
 CONFIG_ENV_VARS_UBOOT_CONFIG=y
 CONFIG_FIT=y
 CONFIG_SPL_FIT_PRINT=y
 CONFIG_SPL_LOAD_FIT=y
 CONFIG_SPL_LOAD_FIT_ADDRESS=0x100200000
-CONFIG_SPL_FIT_SOURCE="arch/arm/mach-axera/laguna/spl-fit.its"
 # CONFIG_USE_SPL_FIT_GENERATOR is not set
 # CONFIG_BOOTSTD is not set
 CONFIG_SUPPORT_RAW_INITRD=y
@@ -76,6 +72,9 @@ CONFIG_HAS_CUSTOM_SPL_MALLOC_START=y
 CONFIG_CUSTOM_SYS_SPL_MALLOC_ADDR=0x101000000
 CONFIG_SPL_DISPLAY_PRINT=y
 CONFIG_SPL_MD5=y
+CONFIG_SPL_ENV_SUPPORT=y
+CONFIG_SPL_SAVEENV=y
+CONFIG_SPL_MULTI_BLK=y
 CONFIG_SPL_RAM_SUPPORT=y
 CONFIG_SPL_RAM_DEVICE=y
 CONFIG_SPL_SPI_FLASH_MTD=y
