--- a/configs/lua-qemu_defconfig
+++ b/configs/lua-qemu_defconfig
@@ -181,6 +181,8 @@ CONFIG_CMD_MTDPARTS=y
 CONFIG_CMD_MTDPARTS_SPREAD=y
 CONFIG_CMD_MTDPARTS_SHOW_NET_SIZES=y
 CONFIG_CMD_AVB=y
+CONFIG_CMD_UBI=y
+CONFIG_CMD_UBI_RENAME=y
 CONFIG_MMC_SPEED_MODE_SET=y
 CONFIG_PARTITION_TYPE_GUID=y
 CONFIG_SPL_OF_CONTROL=y
@@ -236,6 +238,7 @@ CONFIG_SPI_FLASH_SST=y
 CONFIG_SPI_FLASH_MTD=y
 CONFIG_DM_MTD_SPI_NOR=y
 CONFIG_SPL_DM_MTD_SPI_NOR=y
+CONFIG_UBI_BLOCK=y
 CONFIG_DM_MDIO=y
 CONFIG_DM_ETH_PHY=y
 CONFIG_PHY_GIGE=y
