--- a/drivers/mtd/spi/Kconfig
+++ b/drivers/mtd/spi/Kconfig
@@ -264,6 +264,7 @@ config SPL_SPI_FLASH_MTD
 config DM_MTD_SPI_NOR
 	bool "SPI Flash MTD Block support"
 	depends on SPI_FLASH_MTD && SPI_FLASH
+	depends on MTD_BLOCK
 	help
 	  Enable the MTD block support for spi flash layer, this adapter is
 	  for translating blk_read/blk_write commands into mtd_read/write
@@ -272,6 +273,7 @@ config DM_MTD_SPI_NOR
 config SPL_DM_MTD_SPI_NOR
 	bool "SPI Flash MTD Block support for SPL"
 	depends on SPI_FLASH_MTD && SPI_FLASH && SPL
+	depends on MTD_BLOCK
 	help
 	  Enable the MTD block support for spi flash layer in SPL.
 
