--- a/configs/lua-qemu_defconfig
+++ b/configs/lua-qemu_defconfig
@@ -228,6 +228,8 @@ CONFIG_MMC_SDHCI_ADMA=y
 CONFIG_MMC_SDHCI_LMT=y
 CONFIG_MTD=y
 CONFIG_DM_MTD=y
+CONFIG_MTD_BLOCK=y
+CONFIG_MTD_BLOCK_WRITE_OOB=y
 CONFIG_SYS_MTDPARTS_RUNTIME=y
 CONFIG_MTD_RAW_NAND=y
 CONFIG_MTD_SPI_NAND=y
