--- a/configs/lua-qemu_defconfig
+++ b/configs/lua-qemu_defconfig
@@ -31,11 +31,10 @@ CONFIG_LUA_OPTEE_SUPPORT=y
 CONFIG_LUA_FDT_LOAD_NAME="laguna-qemu-virt.dtb"
 CONFIG_LUA_RAMDISK_LOAD_NAME="rootfs.cpio.lz4"
 CONFIG_LUA_GICV2_LOWLEVEL_INIT=y
+CONFIG_LUA_COMMON_CRU=y
+CONFIG_LUA_PERIPH_CRU=y
+CONFIG_LUA_SAFETY_TOP_CRU=y
 CONFIG_LUA_SAFETY_INIT=y
-CONFIG_LUA_SECURE_BOOT=y
-CONFIG_LUA_FIT=y
-# CONFIG_SPL_LOAD_MULTI_FIT is not set
-CONFIG_LUA_RAS=y
 CONFIG_LUA_MTDPARTS_READ=y
 CONFIG_LUA_AB=y
 CONFIG_LUA_CUSTOM_SERVERIP=y
@@ -195,9 +194,7 @@ CONFIG_BOOTP_SERVERIP=y
 CONFIG_SPL_DM=y
 CONFIG_SPL_DM_WARN=y
 CONFIG_SPL_DM_SEQ_ALIAS=y
-CONFIG_REGMAP=y
 CONFIG_SPL_REGMAP=y
-CONFIG_SYSCON=y
 CONFIG_SPL_SYSCON=y
 CONFIG_SIMPLE_BUS_CORRECT_RANGE=y
 CONFIG_SPL_OF_TRANSLATE=y
@@ -280,6 +277,9 @@ CONFIG_PL022_SPI=y
 CONFIG_SYSINFO=y
 CONFIG_SPL_SYSINFO=y
 CONFIG_SYSINFO_SYSCON=y
+CONFIG_SYSRESET=y
+CONFIG_SPL_SYSRESET=y
+CONFIG_SYSRESET_SYSCON=y
 CONFIG_USB=y
 # CONFIG_SPL_DM_USB is not set
 CONFIG_USB_XHCI_HCD=y
