--- a/arch/arm/Kconfig
+++ b/arch/arm/Kconfig
@@ -394,6 +394,15 @@ config ARCH_CPU_INIT
 	  Some architectures require a call to arch_cpu_init().
 	  Say Y here to enable it
 
+config ARCH_FIXUP_FDT
+	bool "Enable ARCH_FIXUP_FDT"
+	default y
+	help
+	  A default arch_fixup_fdt() implementation is provided in
+	  arch/arm/lib/bootm-fdt.c. If this default implementation
+	  is not suitable, it can be overridden by a board-specific
+	  implementation.
+
 config SYS_ARCH_TIMER
 	bool "ARM Generic Timer support"
 	depends on CPU_V7A || ARM64
