--- a/arch/arm/lib/Makefile
+++ b/arch/arm/lib/Makefile
@@ -29,7 +29,7 @@ obj-y	+= relocate.o
 endif
 
 obj-$(CONFIG_CPU_V7M) += cmd_boot.o
-obj-$(CONFIG_OF_LIBFDT) += bootm-fdt.o
+obj-$(CONFIG_ARCH_FIXUP_FDT) += bootm-fdt.o
 obj-$(CONFIG_CMD_BOOTI) += bootm.o image.o
 obj-$(CONFIG_CMD_BOOTM) += bootm.o
 obj-$(CONFIG_CMD_BOOTZ) += bootm.o zimage.o
@@ -37,7 +37,7 @@ obj-$(CONFIG_SYS_L2_PL310) += cache-pl310.o
 else
 obj-$(CONFIG_$(SPL_TPL_)FRAMEWORK) += spl.o
 obj-$(CONFIG_SPL_FRAMEWORK) += zimage.o
-obj-$(CONFIG_OF_LIBFDT) += bootm-fdt.o
+obj-$(CONFIG_ARCH_FIXUP_FDT) += bootm-fdt.o
 obj-$(CONFIG_SPL_FRAMEWORK) += image.o
 endif
 ifdef CONFIG_ARM64
